--- a/.sfdx/sfdx-config.json
+++ b/.sfdx/sfdx-config.json
@@ -1,5 +1,5 @@
 {
-  "defaultusername": "VenuGopal",
+  "defaultusername": "CentralOrg",
   "edition": "Devloper",
   "features": [],
   "hasSampleData": true,
